--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -29,7 +29,7 @@ sites:
 
 status-website:
   baseUrl: /upptime # where "repo" is your repository name
-  name: Status of Doc Square App
+  name: Status
 
 # Upptime also supports notifications, assigning issues, and more
 # See https://upptime.js.org/docs/configuration
