--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -18,14 +18,17 @@ status-website:
   cname: status.cloudintegration.eu
   # baseUrl: /your-repo-name
   logoUrl: https://raw.githubusercontent.com/upptime/upptime.js.org/master/static/img/icon.svg
+  themeUrl: https://n8n-io.github.io/n8n-cloud-status/themes/polydocs.css
   name: Status
   introTitle: "**Upptime** is the open-source uptime monitor and status page, powered entirely by GitHub."
   introMessage: This is a sample status page which uses **real-time** data from our [GitHub repository](https://github.com/upptime/upptime). No server required — just GitHub Actions, Issues, and Pages. [**Get your own for free**](https://github.com/upptime/upptime)
   navbar:
-    - title: Status
-      href: /
-    - title: GitHub
-      href: https://github.com/$OWNER/$REPO
+    - title: App
+      href: https://doc2app.cloudintegration.eu/
+    - title: Polydocs
+      href: https://polydocs.io
+    - title: Docs
+      href: https://docs.cloudintegration.io
 
 # status-website:
 #   baseUrl: /upptime # where "repo" is your repository name
