--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -20,8 +20,8 @@ status-website:
   logoUrl: https://raw.githubusercontent.com/upptime/upptime.js.org/master/static/img/icon.svg
   themeUrl: https://n8n-io.github.io/n8n-cloud-status/themes/polydocs.css
   name: Status
-  introTitle: "**Upptime** is the open-source uptime monitor and status page, powered entirely by GitHub."
-  introMessage: This is a sample status page which uses **real-time** data from our [GitHub repository](https://github.com/upptime/upptime). No server required — just GitHub Actions, Issues, and Pages. [**Get your own for free**](https://github.com/upptime/upptime)
+  #introTitle: "**Upptime** is the open-source uptime monitor and status page, powered entirely by GitHub."
+  introMessage: "Disclaimer: the Instance Cluster monitor shows the general health of the CloudIntegration cluster."
   navbar:
     - title: App
       href: https://doc2app.cloudintegration.eu/
