--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -17,8 +17,8 @@ status-website:
   # Uncomment the `baseUrl` line if you don't have a custom domain and add your repo name there
   cname: status.cloudintegration.eu
   # baseUrl: /your-repo-name
-  logoUrl: https://raw.githubusercontent.com/upptime/upptime.js.org/master/static/img/icon.svg
-  themeUrl: https://n8n-io.github.io/n8n-cloud-status/themes/polydocs.css
+  logoUrl: https://fellow-consulting-ag.github.io/upptime/themes/Icon.svg
+  themeUrl: https://fellow-consulting-ag.github.io/upptime/themes/polydocs.css
   name: Status
   #introTitle: "**Upptime** is the open-source uptime monitor and status page, powered entirely by GitHub."
   introMessage: "Disclaimer: the Instance Cluster monitor shows the general health of the CloudIntegration cluster."
