--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -17,7 +17,7 @@ status-website:
   # Uncomment the `baseUrl` line if you don't have a custom domain and add your repo name there
   cname: status.cloudintegration.eu
   # baseUrl: /your-repo-name
-  logoUrl: https://fellow-consulting-ag.github.io/upptime/themes/Icon.svg
+  logoUrl: https://polydocs.io/wp-content/uploads/2022/04/Logo.svg
   themeUrl: https://fellow-consulting-ag.github.io/upptime/themes/polydocs.css
   name: Status
   #introTitle: "**Upptime** is the open-source uptime monitor and status page, powered entirely by GitHub."
