--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -18,7 +18,7 @@ status-website:
   cname: status.cloudintegration.eu
   # baseUrl: /your-repo-name
   logoUrl: https://polydocs.io/wp-content/uploads/2022/04/Logo.svg
-  themeUrl: https://fellow-consulting-ag.github.io/upptime/themes/polydocs.css
+  themeUrl: https://status.cloudintegration.eu/themes/polydocs.css
   name: Status
   #introTitle: "**Upptime** is the open-source uptime monitor and status page, powered entirely by GitHub."
   introMessage: "Disclaimer: the Instance Cluster monitor shows the general health of the CloudIntegration cluster."
