--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -7,9 +7,9 @@ sites:
     url: https://cloudintegration.eu/
   - name: Extraction and Classifications API
     url: https://fellowkv2.cloudintegration.eu/
-  - name: Doc Square App
+  - name: Doc &sup2; App
     url: https://doc2app.cloudintegration.eu/
-  - name: Doc Square Landing Page
+  - name: Doc &sup2; Landing Page
     url: https://doc2landing.cloudintegration.eu/
 
 status-website:
@@ -17,7 +17,7 @@ status-website:
   # Uncomment the `baseUrl` line if you don't have a custom domain and add your repo name there
   cname: status.cloudintegration.eu
   # baseUrl: /your-repo-name
-  logoUrl: https://polydocs.io/wp-content/uploads/2022/04/Logo.svg
+  logoUrl: https://polydocs.io/wp-content/uploads/2022/04/Icon.svg
   themeUrl: https://status.cloudintegration.eu/themes/polydocs.css
   name: Status
   #introTitle: "**Upptime** is the open-source uptime monitor and status page, powered entirely by GitHub."
